fixing tag styles and overflow

--- a/carousel.css
+++ b/carousel.css
@@ -36,7 +36,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
+/*  height: 500px;*/
   background-color: #F4F5F6;
 }
 .carousel-inner > .item > img {
